--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# ingnore credentials
+# ignore credentials
 7placebot/credentials.txt
 credentials.txt
+
+# ignore nix build artifacts
+result/
