--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# ingnore credentials
-7placebot/credentials.txt
-credentials.txt
+.env
